--- a/project1.ipynb
+++ b/project1.ipynb
@@ -10,27 +10,51 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.2-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This notebook will be used for used for Capstone Project of the final course of Data Science Professional Certificate."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "print(\"hi\")"
+    "import pandas as pandas\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Hello Capstone Project Course!\n"
+    }
+   ],
+   "source": [
+    "print(\"Hello Capstone Project Course!\")"
    ]
   }
  ]
