--- a/project1.ipynb
+++ b/project1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will be used for used for Capstone Project of the final course of Data Science Professional Certificate."
+    "This notebook will be used for Capstone Project of the final course of Data Science Professional Certificate."
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -56,6 +56,13 @@
    "source": [
     "print(\"Hello Capstone Project Course!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
