--- a/project1.ipynb
+++ b/project1.ipynb
@@ -36,7 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pandas\n",
+    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
@@ -56,13 +56,6 @@
    "source": [
     "print(\"Hello Capstone Project Course!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
